--- a/kubernetes/multi-account/template.yaml
+++ b/kubernetes/multi-account/template.yaml
@@ -3,13 +3,17 @@ kind: Namespace
 metadata:
   name: ${ACCOUNT_NAMESPACE}
   labels:
-    app.kubernetes.io/name: ${ACCOUNT_NAMESPACE}
+    app.kubernetes.io/name: vscode-server
+    vscode-server/owner: ${ACCOUNT_NAMESPACE}
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   namespace: ${ACCOUNT_NAMESPACE}
   name: vscode-server
+  labels:
+    app.kubernetes.io/name: vscode-server
+    vscode-server/owner: ${ACCOUNT_NAMESPACE}
 ---
 apiVersion: v1
 kind: Service
@@ -18,6 +22,7 @@ metadata:
   namespace: ${ACCOUNT_NAMESPACE}
   labels:
     app.kubernetes.io/name: vscode-server
+    vscode-server/owner: ${ACCOUNT_NAMESPACE}
 spec:
   type: ClusterIP
   ports:
@@ -33,6 +38,9 @@ kind: Deployment
 metadata:
   name: vscode-server
   namespace: ${ACCOUNT_NAMESPACE}
+  labels:
+    app.kubernetes.io/name: vscode-server
+    vscode-server/owner: ${ACCOUNT_NAMESPACE}
 spec:
   strategy:
     type: Recreate
@@ -43,6 +51,7 @@ spec:
     metadata:
       labels:
         app.kubernetes.io/name: vscode-server
+        vscode-server/owner: ${ACCOUNT_NAMESPACE}
     spec:
       serviceAccountName: vscode-server
       securityContext:
@@ -54,6 +63,9 @@ spec:
           imagePullPolicy: Always
           securityContext:
             privileged: true
+          env:
+            - name: DOCKER_HOST
+              value: unix:///var/run/docker-host.sock
           resources:
             limits:
               cpu: ${DIND_CPU_MAX}
@@ -95,7 +107,7 @@ spec:
             timeoutSeconds: 5
           volumeMounts:
             - mountPath: /home/codespace/.ssh
-              name: vscode-server-sshd
+              name: vscode-server-ssh
               readOnly: true
             - mountPath: /home/codespace/.vscode-remote
               name: vscode-server-volume
@@ -106,8 +118,8 @@ spec:
             - mountPath: /certs
               name: vscode-server-volume
               subPath: vscode-server-cert
-            - mountPath: /var/run
-              name: docker-graph-run
+            - name: docker-graph-run
+              mountPath: /var/run
           env:
             - name: VSCODE_KEYRING_PASS
               value: "${VSCODE_KEYRING_PASS}"
@@ -126,9 +138,9 @@ spec:
       volumes:
         - name: docker-graph-run
           emptyDir: {}
-        - name: vscode-server-sshd
+        - name: vscode-server-ssh
           secret:
-            secretName: vscode-server-sshd
+            secretName: vscode-server-ssh
             optional: true
         - name: vscode-server-volume
           persistentVolumeClaim:
@@ -139,6 +151,9 @@ apiVersion: v1
 metadata:
   namespace: ${ACCOUNT_NAMESPACE}
   name: pvc-vscode-server-${ACCOUNT_NAMESPACE}
+  labels:
+    app.kubernetes.io/name: vscode-server
+    vscode-server/owner: ${ACCOUNT_NAMESPACE}
 spec:
   accessModes:
     - ReadWriteOnce
@@ -153,6 +168,7 @@ kind: Role
 metadata:
   labels:
     app.kubernetes.io/name: vscode-server
+    vscode-server/owner: ${ACCOUNT_NAMESPACE}
   name: vscode-server
   namespace: ${ACCOUNT_NAMESPACE}
 rules:
@@ -170,6 +186,7 @@ kind: RoleBinding
 metadata:
   labels:
     app.kubernetes.io/name: vscode-server
+    vscode-server/owner: ${ACCOUNT_NAMESPACE}
   name: vscode-server
   namespace: ${ACCOUNT_NAMESPACE}
 roleRef:
@@ -186,6 +203,9 @@ kind: Ingress
 metadata:
   name: vscode-server
   namespace: ${ACCOUNT_NAMESPACE}
+  labels:
+    app.kubernetes.io/name: vscode-server
+    vscode-server/owner: ${ACCOUNT_NAMESPACE}
   annotations:
     nginx.ingress.kubernetes.io/backend-protocol: HTTP
     nginx.ingress.kubernetes.io/use-regex: "true"
