--- a/devcontainers/.devcontainer/devcontainer-vscode-server.json
+++ b/devcontainers/.devcontainer/devcontainer-vscode-server.json
@@ -4,8 +4,17 @@
         "context": "."
     },
     "features": {
-        "./local-features/code-server": "latest"
+        "./local-features/uninstall-docker-in-docker": "latest",
+        "ghcr.io/devcontainers/features/docker-outside-of-docker:1": {
+            "version": "latest"
+        },
+        "./local-features/vscode-server": "latest"
     },
+	"overrideFeatureInstallOrder": [
+		"./local-features/uninstall-docker-in-docker",
+		"ghcr.io/devcontainers/features/docker-outside-of-docker",
+		"./local-features/vscode-server"
+	],
     "remoteUser": "codespace",
     "containerUser": "codespace",
     // Use 'forwardPorts' to make a list of ports inside the container available locally.
